--- a/package.json
+++ b/package.json
@@ -31,6 +31,18 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts?(x)"
+        ],
+        "rules": {
+          "no-console": "error",
+          "@typescript-eslint/no-unused-vars": "error",
+          "@typescript-eslint/explicit-function-return-type": "error"
+        }
+      }
     ]
   },
   "browserslist": {
